<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:id="@+id/outputTextView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="40sp" tools:autoSizeMaxTextSize="32dp" android:textStyle="bold"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:id="@+id/answerTextView"
            app:layout_constraintTop_toBottomOf="@+id/outputTextView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="textEnd" android:textSize="36sp" app:autoSizeMaxTextSize="20dp"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintTop_toBottomOf="@+id/answerTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.0"
    >

        <Button
                android:text="@string/MemoryPlus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/memPlusButton"
                android:height="80dp" android:width="96dp" android:hapticFeedbackEnabled="true"
                tools:hapticFeedbackEnabled="true" style="@style/OrdButton"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/memClearButton"
                android:textSize="36sp" android:fontFamily="casual"/>
        <Button
                android:text="@string/MemoryMinusButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/memMinusButton"
                android:height="80dp" android:width="96dp" android:hapticFeedbackEnabled="true"
                tools:hapticFeedbackEnabled="true" style="@style/OrdButton"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/memPlusButton"
                android:textSize="36sp" android:fontFamily="casual"/>
        <Button
                android:text="@string/MemoryClear"
                android:id="@+id/memClearButton"
                tools:hapticFeedbackEnabled="true" style="@style/OrdButton" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:textSize="36sp"
                android:fontFamily="casual"/>
        <Button
                android:text="@string/MemoryRecallButton"
                android:id="@+id/memRecallButton"
                tools:hapticFeedbackEnabled="true" style="@style/ElongButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/memMinusButton"
                app:layout_constraintEnd_toEndOf="parent" android:textSize="36sp" android:fontFamily="casual"/>
        <Button
                android:text="@string/ClearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/clearButton" style="@style/OrdButton"
                app:layout_constraintTop_toBottomOf="@+id/memClearButton"
                app:layout_constraintStart_toStartOf="parent" android:textSize="36sp"
                android:fontFamily="casual" android:textColor="@color/design_default_color_primary_dark"
                android:textColorHighlight="@color/design_default_color_primary"/>
        <Button
                android:text="@string/DivideButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/divideButton" style="@style/OrdButton"
                app:layout_constraintStart_toEndOf="@+id/clearButton"
                app:layout_constraintTop_toBottomOf="@+id/memPlusButton" android:textSize="36sp"
                android:fontFamily="casual" android:textColor="@color/design_default_color_primary_dark"
                android:textColorHighlight="@color/design_default_color_primary"/>
        <Button
                android:text="@string/MultiplyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/multiplyButton" style="@style/OrdButton"
                app:layout_constraintTop_toBottomOf="@+id/memMinusButton"
                app:layout_constraintStart_toEndOf="@+id/divideButton"
                android:textSize="36sp" android:fontFamily="casual"
                android:textColor="@color/design_default_color_primary_dark"
                android:textColorHighlight="@color/design_default_color_primary"/>
        <Button
                android:text="@string/EraseButon"
                android:layout_height="wrap_content"
                android:id="@+id/eraseButton" style="@style/ElongButton"
                app:layout_constraintTop_toBottomOf="@+id/memRecallButton"
                app:layout_constraintStart_toEndOf="@+id/multiplyButton" app:layout_constraintEnd_toEndOf="parent"
                android:textSize="36sp" android:fontFamily="casual"
                android:textColor="@color/design_default_color_primary_dark"
                android:textColorHighlight="@color/design_default_color_primary"/>
        <Button
                android:text="@string/SevenButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sevenButton" style="@style/OrdButton"
                app:layout_constraintTop_toBottomOf="@+id/clearButton"
                app:layout_constraintStart_toStartOf="parent" android:textSize="36sp"
                android:fontFamily="casual"/>
        <Button
                android:text="@string/Eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/eightButton" style="@style/OrdButton"
                app:layout_constraintTop_toBottomOf="@+id/divideButton"
                app:layout_constraintStart_toEndOf="@+id/sevenButton" android:textSize="36sp"
                android:fontFamily="casual"/>
        <Button
                android:text="@string/NineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nineButton" style="@style/OrdButton"
                app:layout_constraintTop_toBottomOf="@+id/multiplyButton"
                app:layout_constraintStart_toEndOf="@+id/eightButton" android:textSize="36sp"
                android:fontFamily="casual"/>
        <Button
                android:text="@string/MinusButton"
                android:layout_height="wrap_content"
                android:id="@+id/minusButton" style="@style/ElongButton"
                app:layout_constraintTop_toBottomOf="@+id/eraseButton"
                app:layout_constraintStart_toEndOf="@+id/nineButton"
                app:layout_constraintEnd_toEndOf="parent" android:textSize="36sp" android:fontFamily="casual"
                android:textColor="@color/design_default_color_primary_dark"
                android:textColorHighlight="@color/design_default_color_primary"/>
        <Button
                android:text="@string/FourButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fourButton"
                app:layout_constraintTop_toBottomOf="@+id/sevenButton" app:layout_constraintStart_toStartOf="parent"
                style="@style/OrdButton" android:textSize="36sp" android:fontFamily="casual"/>
        <Button
                android:text="@string/FiveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fiveButton"
                app:layout_constraintTop_toBottomOf="@+id/eightButton"
                app:layout_constraintStart_toEndOf="@+id/fourButton" style="@style/OrdButton" android:textSize="36sp"
                android:fontFamily="casual"/>
        <Button
                android:text="@string/SixButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sixButton"
                app:layout_constraintTop_toBottomOf="@+id/nineButton"
                app:layout_constraintStart_toEndOf="@+id/fiveButton" style="@style/OrdButton" android:textSize="36sp"
                android:fontFamily="casual"/>
        <Button
                android:text="@string/PlusButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/plusButton"
                app:layout_constraintTop_toBottomOf="@+id/minusButton"
                app:layout_constraintStart_toEndOf="@+id/sixButton" app:layout_constraintEnd_toEndOf="parent"
                style="@style/ElongButton" android:textSize="36sp" android:fontFamily="casual"
                android:textColor="@color/design_default_color_primary_dark"
                android:textColorHighlight="@color/design_default_color_primary"/>
        <Button
                android:text="@string/OneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/oneButton"
                app:layout_constraintTop_toBottomOf="@+id/fourButton" app:layout_constraintStart_toStartOf="parent"
                style="@style/OrdButton" android:textSize="36sp" android:fontFamily="casual"/>
        <Button
                android:text="@string/TwoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/twoButton"
                app:layout_constraintTop_toBottomOf="@+id/fiveButton"
                app:layout_constraintStart_toEndOf="@+id/oneButton" style="@style/OrdButton" android:textSize="36sp"
                android:fontFamily="casual"/>
        <Button
                android:text="@string/ThreeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/threeButton" style="@style/OrdButton"
                app:layout_constraintTop_toBottomOf="@+id/sixButton"
                app:layout_constraintStart_toEndOf="@+id/twoButton" android:textSize="36sp"
                android:fontFamily="casual"/>
        <Button
                android:text="@string/PercentButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/percentButton"
                app:layout_constraintTop_toBottomOf="@+id/oneButton" app:layout_constraintStart_toStartOf="parent"
                style="@style/OrdButton" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0" android:textSize="36sp" android:fontFamily="casual"/>
        <Button
                android:text="@string/ZeroButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/zeroButton"
                app:layout_constraintTop_toBottomOf="@+id/twoButton"
                app:layout_constraintStart_toEndOf="@+id/percentButton" style="@style/OrdButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0" android:textSize="36sp" android:fontFamily="casual"/>
        <Button
                android:text="@string/DecButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/decimalButton"
                app:layout_constraintTop_toBottomOf="@+id/threeButton"
                app:layout_constraintStart_toEndOf="@+id/zeroButton" style="@style/OrdButton"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="36sp" app:layout_constraintVertical_bias="0.0" android:fontFamily="casual"/>
        <Button
                android:text="@string/EqualsButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/equalsButton"
                app:layout_constraintTop_toBottomOf="@+id/plusButton"
                app:layout_constraintStart_toEndOf="@+id/threeButton" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="36sp" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0" android:fontFamily="casual"
                android:textColor="@color/design_default_color_primary_dark"
                android:textColorHighlight="@color/design_default_color_primary"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>